Closed Bug 1390951 Opened 8 years ago Closed 8 years ago

stylo: Crash in style::stylesheet_set::StylesheetSet<T>::collect_invalidations_for<T>

Categories

(Core :: CSS Parsing and Computation, defect, P2)

Unspecified
All
defect

Tracking

()

RESOLVED FIXED
mozilla57
Tracking Status
firefox-esr52 --- unaffected
firefox55 --- unaffected
firefox56 --- wontfix
firefox57 --- fixed

People

(Reporter: marcia, Assigned: bholley)

References

Details

(Keywords: crash)

Crash Data

Attachments

(2 files)

This bug was filed from the Socorro interface and is report bp-ca52c7f2-93fa-453a-87e9-715db0170815. ============================================================= Seen while looking at crash stats: http://bit.ly/2fLMPEx. 8 crashes/8 installations. Crashes started using crash reason in one report: Moz crash reason: Locked::read_with called with a guard from an unrelated SharedRwLock URL shows as about:printpreview
See Also: → 1390838
(In reply to Marcia Knous [:marcia - use ni] from comment #0) > crash reason in one report: Moz crash reason: Locked::read_with called with > a guard from an unrelated SharedRwLock This one report needs to be corrupted memory of some sort, we only use a single SharedRwLock, so...
I don't see any crash reports from Beta 56 yet.
Over the past week, there have been 56 instances of this crash signature from 26 different users.
A _lot_ of them are print preview related... Do we have any reproducible print preview issue? Any url in those bugs?
Flags: needinfo?(cpeterson)
Nearly all of the crashes are from Windows, mostly with URL about:printpreview. 3 of the 4 Linux crashes have the following URL: https://www.howtogeek.com/240487/how-to-play-dvds-and-blu-rays-on-linux/
Flags: needinfo?(cpeterson)
OS: Windows 10 → All
I suspect this kind of crash may be because of mix of gecko sheet and servo sheet. There may be other cases that we haven't solved to have both Servo and Gecko stylesheet on the same page somehow.
Still seems to happen many times. Given that print preview isn't that a frequently used feature, the crash rate seems high enough... It would be good if we can have a reproducible case.
Priority: P3 → P2
(I tried with several websites, and failed to reproduce this crash... I hit bug 1394630 several times, but when I use the same page in release build, no crash happens.)
I can reproduce some crashes on print preview using the URL in comment 5.
Assignee: nobody → bobbyholley
MozReview-Commit-ID: F6HMAsSsNDa
Attachment #8902416 - Flags: review?(xidorn+moz)
MozReview-Commit-ID: 1oB7FDxAZFt
Attachment #8902417 - Flags: review?(xidorn+moz)
See Also: → 1394987
Attachment #8902416 - Flags: review?(xidorn+moz) → review+
Attachment #8902417 - Flags: review?(xidorn+moz) → review+
Pushed by bholley@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/3fe2012dd403 Use the same style backend when cloning documents. r=xidorn https://hg.mozilla.org/integration/autoland/rev/f2998d03afcc Assert harder against stylesheet type mismatches. r=xidorn
I see one instance of this crash on Beta 56. If we see any more and this patch fixes the problem on Nightly, we should consider uplifting to Beta 56.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: