Bug 1390951 - Use the same style backend when cloning documents. r=xidorn

MozReview-Commit-ID: F6HMAsSsNDa